# AI4Deliberation

./: .gitignore  ENHANCED_PIPELINE_GUIDE.md  LICENSE  README.md  SELECTORS.md  SPECIFICATIONS.md  TODO_DOCUMENTATION.md  bertopictest.ipynb  check_pipeline_status.py  enhanced_pipeline_orchestrator.py  improved_fetch_redirects.py  key_themes_analysis.txt  pipeline_monitor.py  run_enhanced_pipeline.sh  schema.md  test_rag_embeddings.py  update_document_content.py  upload_to_huggingface.py
ai4deliberation_pipeline/: PIPELINE_WORKFLOW_CHECKLIST.md  README.md  TODO_PIPELINE_INTEGRATION.md  __init__.py  check_test_docs.py  deliberation_data_gr_MIGRATED_FRESH_20250602170747.db_processing_report_20250602_170910.txt  inspect_docs.py  query_consultation.py  requirements-test.txt  requirements.txt
article_exports/: README.md
article_extraction_analysis/: README.md  requirements.txt
batch_results/: README.md
bertopic_test/: README.md  requirements.txt
cleaning/: README.md  requirements.txt
complete_scraper/: TODO.md  content_scraper.py  db_models.py  db_population_report.py  list_consultations.py  metadata_scraper.py  scrape_all_consultations.py  scrape_single_consultation.py  scrape_to_db.py  utils.py
docs/: README.md  evaluation_phase_diagram.mermaid  evaluation_phase_documentation.md  (+4 more)
tests/: README.md  (+8 more)
ΦΕΚ/nomoi/check_badness/extraction_metrics_rs/: Cargo.toml
ΦΕΚ/nomoi/check_badness/extraction_metrics_rs/src/: TODO.md  cleaning_module.rs  directory_processor.rs  lib.rs  main.rs  refactoring.md  refactoring_step_2.md  specifications.md  table_analysis_module.rs
(+235 files in other folders)
