[package]
name = "text_cleaner_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "text_cleaner_rs"
crate-type = ["cdylib"]

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"
rayon = "1.8.0"
walkdir = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
futures = "0.3.30"
once_cell = "1.19.0"
pyo3 = { version = "0.19.0", features = ["extension-module"] }
memchr = "2"
aho-corasick = "1"
htmlentity = "~1.3.0"
